# trpg-agent-web

./: .env.example  .gitignore  FILE_STATUS.md  PHASE1_PLAN.md  README.md  ROADMAP.md  pyproject.toml
data/: character_tags.json  item_tags.json  scene_tags.json
data/saves/full_test/古屋_门前/: history.jsonl  state.json
data/saves/migrate_test/旧存档/: history.jsonl  state.json
data/saves/save_test/医院探险_第2轮/: history.jsonl  state.json
data/sessions/default/: characters.json
data/systems/: coc_7e.json
docs/: overlay_b.html  直播企划.md  直播礼物互动合规分析.md
prompts/: campaign_tone_de.md  chekhov_extract_de.md  chekhov_extract_zh.md  dm_core_de.md  kp_core_zh.md  npc_memory_extract_de.md  npc_memory_extract_zh.md
scripts/: tag_characters.py  tag_items.py
tests/: test_dungeon_map.py  test_integration.py  test_multi_agent.py  test_multiplayer.py  test_pipeline.py  test_session.py  test_unit.py
trpg_agent/: __init__.py  __main__.py  logsetup.py  mapgen.py  orchestrator.py  overlay_server.py  session.py  shutdown.py  turn_timing.py  web_server.py
trpg_agent/adventure/: variance.py
trpg_agent/llm/: client.py  consistency.py  director_msgs.py  echo_guard.py  intro_guard.py  persona.py  preflight.py  prompt_assembly.py  roll_router.py  sanitize.py  stream_assembler.py
trpg_agent/memory/: chekhov.py  database.py  game_state.py  gametime.py  gs_parser.py  history.py  npc_memory.py  recap.py  state.py
trpg_agent/rules/: characters.py  coc.py  combat.py  engine.py  marker.py  profile.py  summary.py
trpg_agent/static/: index.html
trpg_agent/tts/: textsplit.py
trpg_agent_web/: __init__.py  web_server.py
trpg_agent_web/static/: index.html
