[project]
name = "trpg-agent"
version = "0.1.0"
description = "中文 TRPG AI 主持人 — 本地化的 COC 跑团 KP Agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
trpg = "trpg_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trpg_agent"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
