[project]
name = "trpg-agent-web"
version = "0.1.0"
description = "TRPG Agent Web — 网页版 AI 跑团界面（FastAPI + SSE + dungeongen 地图）"
requires-python = ">=3.11,<3.14"
dependencies = [
    "trpg-agent[web]>=0.1.0",
]

[project.scripts]
trpg-web = "trpg_agent_web.web_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trpg_agent_web"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
